GNOME Bugzilla – Bug 595845
The applet shows wrong connection information
Last modified: 2009-09-22 16:32:55 UTC
Created attachment 143614 [details] Screenshot showing the wrong connection info in applet The gnome-bluetooth applet shows wrong information about my connected devices. I don't have any bluetooth devices connected, but the applet marks some of them as connected. Even if I try to manually disconnect, nothing happens, as they are not connected in the first place. This is a bug only in the applet, as bluetooth-properties application displays correct information about my connected devices. Attached is a screenshot showing both bluetooth-applet and bluetooth-properties, side by side. This bug is manifesting in latest packages of gnome-bluetooth: tried with Fedora Rawhide with gnome-bluetooth 2.28.0 tried with Fedora Rawhide with gnome-bluetooth 2.27.90 tried with Fedora 11 with latest updates with gnome-bluetooth 2.27.8 all behave in same way on three different computers.
Created attachment 143615 [details] [review] Bug 595845 - The applet shows wrong connection information Fix status information in the applet not matching the service status.
Attachment 143615 [details] pushed as 80a71e8 - Bug 595845 - The applet shows wrong connection information
Hi Bastien, You are damn fast :)
That's because I already knew where the bug was ;)
Update for Fedora 11: https://admin.fedoraproject.org/updates/gnome-bluetooth-2.27.8-3.fc11 The F12 fix will come when I've made another release.
I updated from https://admin.fedoraproject.org/updates/gnome-bluetooth-2.27.8-3.fc11 and it works like it should. Thanks, Paul