Bug 595845 - The applet shows wrong connection information

Fix status information in the applet not matching the service status.
https://bugzilla.gnome.org/show_bug.cgi?id=595845